feat(seo): add Open Graph/Twitter meta and banner cover image for rich previews

--- a/index.html
+++ b/index.html
@@ -11,8 +11,18 @@
     <meta name="theme-color" content="#3B82F6" />
     <title>HealthAI Assistant - Your Personal Health Analysis Tool</title>
     <meta name="description" content="AI-powered healthcare assistant for symptom analysis, drug interactions, medical terms, and report summarization" />
-    <link rel="canonical" href="https://healthai-assistant.netlify.app/" />
+    <link rel="canonical" href="https://health-ai-assistant.vercel.app/" />
     <meta name="robots" content="index, follow" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="HealthAI Assistant" />
+    <meta property="og:title" content="HealthAI Assistant - Your Personal Health Analysis Tool" />
+    <meta property="og:description" content="AI-powered healthcare assistant for symptom analysis, drug interactions, medical terms, and report summarization" />
+    <meta property="og:url" content="https://health-ai-assistant.vercel.app/" />
+    <meta property="og:image" content="https://health-ai-assistant.vercel.app/banner-healthai.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="HealthAI Assistant - Your Personal Health Analysis Tool" />
+    <meta name="twitter:description" content="AI-powered healthcare assistant for symptom analysis, drug interactions, medical terms, and report summarization" />
+    <meta name="twitter:image" content="https://health-ai-assistant.vercel.app/banner-healthai.png" />
   </head>
   <body>
     <div id="root"></div>
